[project]
name = "payment-network-analysis"
version = "0.1.0"
description = "Network structure analysis of UK inter-industry payment flows"
requires-python = ">=3.10"
dependencies = [
    "networkx>=3.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "plotly>=5.15",
    "streamlit>=1.28",
    "pyyaml>=6.0",
    "openpyxl>=3.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "viz"]
